--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,6 +6,6 @@ spring:
       hibernate:
         format_sql: true
   profiles:
-    active: local
+    active: test
 logging.level:
   org.hibernate.SQL: debug
